--- a/styles.css
+++ b/styles.css
@@ -109,3 +109,10 @@ ul {
 h1 {
   font-size: 35px;
 }
+#weather-temperature .active {
+  color: black;
+  cursor: default;
+}
+#weather-temperature .active:hover {
+  text-decoration: none;
+}
